--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -29,6 +29,7 @@ $letter-spacing: 0.8px;
 		letter-spacing: $letter-spacing;
 		line-height: 1;
 		margin-bottom: 20px;
+		height: 100px;
 	}
 
 	p {
